# Robotic-Treasure-Hunt-1

./: .ycm_extra_conf.py  README.md
devel/: .catkin  setup.sh
devel/include/husky_msgs/: HuskyStatus.h
devel/include/logical_camera_plugin/: logicalImage.h
devel/lib/husky_base/: husky_node
devel/lib/labpkg/: gotopose  moveMap
devel/lib/pkgconfig/: scavenger_hunt.pc
devel/lib/scavenger_hunt/: currentPos  getpose  globalCostMap  gotopose  gototreasure  moveMap  treasurelocater  treasurelocator
devel/share/labpkg/cmake/: labpkgConfig.cmake
devel/share/scavenger_hunt/cmake/: scavenger_huntConfig.cmake
src/husky-kinetic-devel/husky_navigation/config/: costmap_common.yaml  planner.yaml
src/labpkg/: CMakeLists.txt
src/labpkg/launch/: lab1.launch
src/labpkg/src/: gotopose.cpp  treasurelocator.cpp
src/scavenger_hunt/: CMakeLists.txt
src/scavenger_hunt/launch/: scavenger.launch
src/scavenger_hunt/src/: currentPos.cpp  getpose.cpp  globalCostMap.cpp  gotopose.cpp  gototreasure.cpp  moveMap.cpp  treasurelocator.cpp
